# github-actions

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  README.md  release-please-config.json
.github/: pull_request_template.md
.github/workflows/: README.md  llm-pr-reviewer.yml  pinact.yml  pr-description-writer-test.yml  pr-description-writer.yml  pre-commit.yml  release-please.yml  reusable-claude-code-project-summary.md  reusable-claude-code-project-summary.yml  reusable-cleanup-gha-cache.yml  reusable-monthly-project-summary-slack.md  reusable-monthly-project-summary-slack.yml  reusable-terraform-aws.md  reusable-terraform-aws.yml  reusable-terraform-gcp.md  reusable-terraform-gcp.yml  reusable-terraform-github.md  reusable-terraform-github.yml  test-composite-actions.yml  test-llm-pr-reviewer.yml  test-pr-description-writer.yml
action-required-reminder/: CHANGELOG.md  README.md  action.yml  check_not_replied_slack_message.sh  check_not_reviewed_gh_pr.sh
build-and-push-to-gar/: CHANGELOG.md  README.md  action.yaml  action.yml
cleanup-cloudrun/: README.md  action.yml
cleanup-cloudrun-traffic-tag/: CHANGELOG.md  README.md  action.yml
deploy-cloudrun/: CHANGELOG.md  README.md  action.yml
deploy-python-app-to-cloud-run/: CHANGELOG.md  README.md  action.yml
docs/: best-practices.md  creating-new-action.md  testing-guidelines.md
llm-pr-reviewer/: LICENSE  README.md  action.yml  llm_providers.py  pr_reviewer.py  pyproject.toml  test_pr_reviwer.py
llm-pr-reviewer/examples/: basic-usage.yml  multi-provider.yml
monthly-project-summary-slack/: CHANGELOG.md  README.md  action.yml
pr-description-writer/: CHANGELOG.md  README.md  action.yml  index.js  index.test.js  package-lock.json  package.json  pr_prompt.txt  similarity.test.js  test-utils.js
pr-description-writer/examples/: advanced-usage.yml  basic-usage.yml
reusable-workflows/: terraform-gcp.yml
set-image-tag/: README.md  action.yml
setup-poetry/: CHANGELOG.md  README.md  action.yml
templates/composite-action/: README.md  action.yml
templates/javascript-action/: action.yml  package.json
templates/javascript-action/src/: index.js
templates/javascript-action/tests/: index.test.js
templates/python-action/: action.yml  pyproject.toml
templates/python-action/src/: main.py
templates/python-action/tests/: test_main.py
