[project]
name = "llm-pr-reviewer"
version = "0.1.0"
description = ""
authors = [
    {name = "Masato Naka",email = "masatonaka1989@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "requests>=2.31.0",
    "anthropic>=0.18.0",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-env = "^1.1.5"
ruff = "^0.12.0"

[tool.pytest.ini_options]
env = [
    "OPENAI_API_KEY=",
    "GITHUB_TOKEN=",
    "REPO=",
    "PR_NUMBER=",
]
